deploy: f3cc88d84d5ab99fc98aef240521c14d66ac8151

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://willgiang.github.io/PointSpreadFunction/" />
 <meta property="og:site_name" content="Resolution" />
 <script type="application/ld+json">
-{"description":"A blog from the perspective of a light microscopy core facility scientist whose last biology class was in high school.","@type":"WebSite","url":"https://willgiang.github.io/PointSpreadFunction/","name":"Resolution","headline":"Resolution","@context":"https://schema.org"}</script>
+{"url":"https://willgiang.github.io/PointSpreadFunction/","@type":"WebSite","headline":"Resolution","name":"Resolution","description":"A blog from the perspective of a light microscopy core facility scientist whose last biology class was in high school.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
   <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
