--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://willgiang.github.io/PointSpreadFunction/404.html" />
 <meta property="og:site_name" content="Resolution" />
 <script type="application/ld+json">
-{"description":"A blog from the perspective of a light microscopy core facility scientist whose last biology class was in high school.","@type":"WebPage","url":"https://willgiang.github.io/PointSpreadFunction/404.html","headline":"Resolution","@context":"https://schema.org"}</script>
+{"url":"https://willgiang.github.io/PointSpreadFunction/404.html","@type":"WebPage","headline":"Resolution","description":"A blog from the perspective of a light microscopy core facility scientist whose last biology class was in high school.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
   <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
